--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+  <link rel="icon" type="image/svg+xml" href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/networkx/networkx-original.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/networkx/networkx-original.svg">
+ 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -60,9 +60,10 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Judit Burgaya Ventura</h1>
-      <p> PhD student (<a href="https://www.mhh.de/en/home" target="_blank">MHH</a>) and Doctoral Researcher (<a href="https://www.twincore.de/en/home/" target="_blank">TWINCORE</a>) in Computational Modeling of Bacterial Populations</p>
+      <p> PhD student - <a href="https://www.mhh.de/en/home" target="_blank">MHH</a> and Doctoral Researcher - <a href="https://www.twincore.de/en/home/" target="_blank">TWINCORE</a></p>
+      <p>Computational Modeling of Bacterial Populations</p>
         <br>
-      <p>I'm a<span class="typed" data-typed-items="Microbiologist, Computational Biologist, Life Science Researcher"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Microbiologist, Computational Biologist, Life Science Researcher"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/juditburgaya" class="twitter"><i class="bx bxl-twitter bx-md"></i></a>
         <a href="https://www.linkedin.com/in/judit-burgaya-ventura-706016199/" class="linkedin"><i class="bx bxl-linkedin bx-md"></i></a>
