--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Judit Buraya Ventura</title>
+  <title>Judit Buraya</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,9 +59,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Judit Burgaya Ventura</h1>
+      <h1>Judit Burgaya</h1>
       <p> PhD student - <a href="https://www.mhh.de/en/home" target="_blank">MHH</a> and Doctoral Researcher - <a href="https://www.twincore.de/en/home/" target="_blank">TWINCORE</a></p>
-      <p>Computational Modeling of Bacterial Populations</p>
+      <p><small style="font-size: 80%"></small>Computational Modeling of Bacterial Populations</small></p>
         <br>
       <p>I'm a <span class="typed" data-typed-items="Microbiologist, Computational Biologist, Life Science Researcher"></span></p>
       <div class="social-links">
@@ -90,38 +90,34 @@
             <img src="assets/img/me.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
+            <h3>A microbiologist going computational!</h3>
+            <p class="">
+                As a microbiologist with a passion for data-driven research, I'm exploring the intersection of microbiology and computing to unlock the power of genomic data. 
+                Specifically, I'm interested in modeling bacterial populations to identify evolutionary signatures and transmission determinants, utilizing genomic sequences 
+                to track emerging and pathogenic lineages, and developing robust between-host transmission models. 
+                Through my work, I hope to gain valuable insights into the factors that drive the spread of infectious diseases and identify strategies for mitigating their impact on public health.
+              </p>
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master </span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:judit.burgaya@gmail.com">judit.burgaya@gmail.com</a></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Interest:</strong> <span>Microbiology, Computational Biology, Genomic Epidemiology</span></li>
+                  </ul>
+                </div>
+                <div class="col-lg-4">
+                  <ul>
+                    <li><i class="bi bi-chevron-right"></i> <strong>ResearchGate:</strong> <a href="https://www.researchgate.net/profile/Judit-Burgaya-Ventura" target="_blank">Click HERE</a></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>ORCID:</strong> <a href="https://orcid.org/0000-0002-6383-1165" target="_blank">Click HERE</a></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <a href="https://github.com/jburgaya" target="_blank">Click HERE</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
           </div>
         </div>
-
-      </div>
-    </section><!-- End About Section -->
+      </section>
+    <!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
