--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Judit Buraya</title>
+  <title>Judit Burgaya</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Judit Burgaya</h1>
-      <p> PhD student - <a href="https://www.mhh.de/en/home" target="_blank">MHH</a> and Doctoral Researcher - <a href="https://www.twincore.de/en/home/" target="_blank">TWINCORE</a></p>
+      <p> PhD student - <a href="https://www.mhh.de" target="_blank">MHH</a> and Doctoral Researcher - <a href="https://www.twincore.de/en/home/" target="_blank">TWINCORE</a></p>
       <p><small style="font-size: 80%"></small>Computational Modeling of Bacterial Populations</small></p>
         <br>
       <p>I'm a <span class="typed" data-typed-items="Microbiologist, Computational Biologist, Life Science Researcher"></span></p>
