--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-lg-3">
-            <img src="assets/img/me.jpg" class="img-fluid" alt="">
+            <img src="assets/img/informal_me.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>A microbiologist going computational!</h3>
