--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-lg-3">
             <img src="assets/img/informal_me.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <div class="col-lg-9 pt-4 pt-lg-0 content">
             <h3>A microbiologist going computational!</h3>
             <p class="">
                 As a microbiologist with a passion for data-driven research, I'm exploring the intersection of microbiology and computing to unlock the power of genomic data. 
@@ -148,11 +148,8 @@
                 <h5>Sep 2020 - Jun 2021</h5>
                 <p><em>Universitat Autònoma de Barcelona (UAB), Bellaterra, Spain</em></p>
                 <p>
-                    <strong>Dissertation: </strong> TO ADD
-                    <strong>Supervisor: </strong> TO ADD
-                    <br>
-                    <strong>Project Overview: </strong>
-                    This project is aimed to ...
+                    <strong>Dissertation: </strong> Cancer immunotherapy based on bacteria
+                    <strong>Supervisor: </strong> Esther Julián
                 </p>
             </div>
             <div class="resume-item">
@@ -160,7 +157,7 @@
               <h5>Sep 2015 - Jun 2020</h5>
               <p><em>Universitat Autònoma de Barcelona (UAB), Bellaterra, Spain</em></p>
               <p>
-                <strong>Dissertation: </strong> TO ADD 
+                <strong>Dissertation: </strong> The microbiota-gut-brain axis implications in Alzheimer’s disease
                 <strong>Supervisor: </strong> TO ADD 
               </p>
             </div>
@@ -168,26 +165,25 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Doctoral Researcher</h4>
+              <h5>Aug 2021 - Present</h5>
+              <p><em>TWINCORE Centre for Experimental and Clinical Infection Research, Hannover, DE  </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Research Assistant</h4>
+              <h5>Sep 2020 - Aug 2021</h5>
+              <p><em>Tuberculosis Research Group, Animal Health Research Center (IRTA-CReSA), Bellaterra, Spain</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Worked on an experimental infection model in laboratory voles to study the pathogenesis and transmission of tuberculosis caused by <em>Mycobacterium microti</em></li>
+                <li>Conducted a project studying adiaspiramycosis in wild rodents using histopathological analysis and measurement of adiaspore diameter with ImageJ software</li>
+                <li>Conducted epidemiological research to assess the burden of animal tuberculosis in Catalunya, including statistical analysis of data</li>
+                <li>Contributed to an ongoing project evaluating the efficacy of a tuberuclosis autovaccine for goats</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+                <h4>Bachelor's internship</h4>
+                <h5>Jun 2019 - Sep 2019</h5>
+                <p><em>Microbiology Clinical Laboratory, Vic Hospital Consortium (CHV), Vic, Spain</em></p>
             </div>
           </div>
         </div>
