--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
           <h2>About</h2>
         </div>
 
-        <div class="">
+        <div class="row">
           <div class="col-lg-3">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content">
             <h3>A microbiologist going computational!</h3>
-            <p class="">
+            <p class="row">
                 As a microbiologist with a passion for data-driven research, I'm exploring the intersection of microbiology and computing to unlock the power of genomic data. 
                 Specifically, I'm interested in modeling bacterial populations to identify evolutionary signatures and transmission determinants, utilizing genomic sequences 
                 to track emerging and pathogenic lineages, and developing robust between-host transmission models. 
