added research projects section

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 <h5>Aug 2021 - present</h5>
                 <p><em>Infection Biology &amp; Dynamics of Host-Pathogen Interactions PhD program, Hannover Medical School (MHH), Hannover, DE</em></p>
                 <p>
-                    <strong>Dissertation: </strong> Computational modeling of bacterial populations and their resilience strategies: influence of the SARS-CoV-2 pandemic on the transmission of multi-drug resistant pathogens
-                    <strong>Supervisor: </strong> Prof. Dr. Marco Galardini 
+                    <strong>Dissertation: </strong> Computational modeling of bacterial populations and their resilience strategies: influence of the SARS-CoV-2 pandemic on the transmission of multi-drug resistant pathogens <br>
+                    <strong>Supervisor: </strong> Prof. Dr. Marco Galardini <br>
                     <strong>Co-supervisors: </strong> Prof. Dr. Susanne Häußler, Prof. Dr. Davide Sassera
                 </p>
             </div>
@@ -147,7 +147,7 @@
                 <h5>Sep 2020 - Jun 2021</h5>
                 <p><em>Universitat Autònoma de Barcelona (UAB), Bellaterra, Spain</em></p>
                 <p>
-                    <strong>Dissertation: </strong> Cancer immunotherapy based on bacteria
+                    <strong>Dissertation: </strong> Cancer immunotherapy based on bacteria <br>
                     <strong>Supervisor: </strong> Esther Julián
                 </p>
             </div>
@@ -156,7 +156,7 @@
               <h5>Sep 2015 - Jun 2020</h5>
               <p><em>Universitat Autònoma de Barcelona (UAB), Bellaterra, Spain</em></p>
               <p>
-                <strong>Dissertation: </strong> The microbiota-gut-brain axis implications in Alzheimer’s disease
+                <strong>Dissertation: </strong> The microbiota-gut-brain axis implications in Alzheimer’s disease <br>
                 <strong>Supervisor: </strong> TO ADD 
               </p>
             </div>
@@ -197,11 +197,10 @@
         <div class="section-title">
           <h2>Research Projects</h2>
           <p> 
-            With the advance of high-throughput technology, omics data are playing an prominent role in the new phase of preventive medicine research.
-            As such, the integration of biomedical science knowledge with bioinformatics/data science skill is the general approach of my intended research direction. <br>
+            My research moves towards leveraging high-throughput technology and interdisciplinary apporaches to study the transmission and evolution of infectious disease pathogens. <br>
             <br>
-            <strong>Keywords:</strong> Virus, Virology, Proteomics, Bioinformatics, Vaccineinformatics, Immunoinformatics
-          </p>
+            <b><em>Microbiology, Microbial Genomics, Computational Modeling, Genomic Epidemiology, Antimicrobial Resistance, Between-Host Transmission, Within-Host Evolution</em></b>
+            </p>
         </div>
   
         <div class="row">
@@ -221,15 +220,16 @@
           <div class="col-lg-6 col-md-6 researchprojects-item filter-active">
             <div class="researchprojects-wrap">
               <div class= "project-box">
-                <h5 class="title"><a href="javascript:void(0);"><em>In silico</em> analysis of genetic variants in biological pathways associated with risk of gout</a></h5>
+                <h5 class="title"><a href="javascript:void(0);">Computational modeling of bacterial populations and their resilience strategies: influence of the SARS-CoV-2 pandemic on the transmission of multi-drug resistant pathogens</a></h5>
                 <p> 
-                  Collaboration with Dr. Tan Lay Kim from National Institutes of Health (NIH), Malaysia <br>
+                  Under supervison of Prof. Dr. Marco Galardini (TWINCORE | Cluster of Excellence RESIST), Prof. Dr. Susanne Häußler (TWINCORE | Cluster of Excellence RESIST | HZI), and Prof. Dr. Davide Sassera (epartment of Biology and Biotechnology, Università di Pavia)
                   <br>
-                  <span class="badge bg-dark">pathway analysis</span>
-                  <span class="badge bg-dark">gene ontology</span>
-                  <span class="badge bg-dark">gout</span>
+                  <span class="badge bg-dark">genomic epidemiology</span>
+                  <span class="badge bg-dark">phylodynamics</span>
+                  <span class="badge bg-dark">network graph sampling</span>
+                  <span class="badge bg-dark">transmission model</span>
                   <br>
-                  <p>Use the published gout-associated single nucleotide polymorphisms (SNPS) to identify the candidate genes and pathways that involved in the pathogenesis of gout.</p>
+                  <p>Use of bacterial genomic sequences to identify evolutionary signatures and transmission determinants. Develop a between-host transmission model that takes into account NPIs, bacterial features and host determinants.</p>
                 </p> 
               </div>
             </div>
@@ -238,69 +238,42 @@
           <div class="col-lg-6 col-md-6 researchprojects-item filter-virology filter-ml">
             <div class="researchprojects-wrap">
               <div class= "project-box">
-                <h5 class="title"><a href="javascript:void(0);">Exploring the chemical space of SARS-CoV-2 drugs via machine learning</a></h5>
+                <h5 class="title"><a href="javascript:void(0);">The bacterial genetic determinants of Escherichia coli capacity to cause bloodstream infections in humans</a></h5>
                 <p> 
-                  Under supervision of Assoc. Prof. Dr. Chanin Nantasenamat (Mahidol University, TH) <br>
+                  Under the supervision of Prof. Dr. Marco Galardini (TWINCORE | Cluster of Excellence RESIST), as a collaboration with Prof. Dr. Erick Denamur (Université Paris Cité, INSERM, IAME), Prof. Dr. François Blanquart (Center for Interdisciplinary Research in Biology, Collège de France, INSERM), and Assoc. Prof. Dr. Julie Marin (Université Sorbonne Paris Nord, INSERM, IAME)<br>
                   <br>
-                  <span class="badge bg-dark">SARS-CoV-2</span>
-                  <span class="badge bg-dark">chemical space analysis</span>
+                  <span class="badge bg-dark">Ecoli</span>
+                  <span class="badge bg-dark">GWAS</span>
                   <span class="badge bg-dark">machine learning</span>
                   <br>
-                  <p>Explore the chemical diversity of compounds against the various COVID-19 target proteins, including main protease, 3CL protease, spike protein <em>etc</em>.</p>
+                  <p>Explore the genomic determinants of <em>Escherichia coli</em> to cause bloodstream infections vs. commensal isolates comparing their genetic backgrounds for virulence-associated and antimicrobial-resistant genes, performing a GWAS, computing it's heritability, and predicting the pathogenicity over time.</p>
                 </p>
                 <div class="researchprojects-info">
                   <h3><strong>Related Link</strong></h3>
                   <br>
                   <div class="researchprojects-links">
-                    <a href="" class="github"><i class="bx bxl-github bx-lg"></i></a>
+                    <a href="https://github.com/jburgaya/2022_ecoli_commensal" class="github"><i class="bx bxl-github bx-lg"></i></a>
+                    <a href="https://www.biorxiv.org/content/10.1101/2022.12.31.522367v1" class="publication"><i class="bx bx-file-blank bx-lg"></i></a>
                   </div>
                 </div>  
               </div>
             </div>
           </div>
   
-          <div class="col-lg-6 col-md-6  researchprojects-item filter-active filter-virology">
-            <div class="researchprojects-wrap">
-              <div class= "project-box">
-                <h5 class="title"><a href="javascript:void(0);">Mapping HLA-supertype-restricted T-cell epitopes in SARS-CoV-2 proteome</a></h5>
-                <p> 
-                  Under supervision of Assoc. Prof. Dr. Mohammad Asif Khan (Perdana University, MY / BVU, TR) <br>
-                  <br>
-                  <span class="badge bg-dark">SARS-CoV-2</span>
-                  <span class="badge bg-dark">T-cell epitope</span>
-                  <span class="badge bg-dark">HLA supertype</span>
-                  <span class="badge bg-dark">epitope-based vaccine candidate</span>
-                  <span class="badge bg-dark">sequence diversity</span>
-                  <br>
-                  <p>Performe a large-scale, proteome-wide mapping and diversity analyses of putative HLA supertype-restricted T-cell 
-                    epitopes of SARS-CoV-2.</p>
-                </p>
-                <div class="researchprojects-info">
-                  <h3><strong>Related Link</strong></h3>
-                  <br>
-                  <div class="researchprojects-links">
-                    <a href="" class="github"><i class="bx bxl-github bx-lg"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-6 col-md-6 researchprojects-item filter-virology">
             <div class="researchprojects-wrap">
               <div class= "project-box">
-                <h5 class="title"><a href="javascript:void(0);">Avian influenza H7N9 virus adaptation to human hosts</a></h5>
+                <h5 class="title"><a href="javascript:void(0);">Experimental <em>Mycobacterium microti</em> Infection in Bank Voles (<em>Myodes glareolus</em>)</a></h5>
                 <p> 
-                  Under supervision of Assoc. Prof. Dr. Mohammad Asif Khan (Perdana University, MY / BVU, TR) <br>
+                  Under supervision of Dr. Enric Vidal and Dr. Bernat Pérez de Val (CReSA, IRTA-UAB) <br>
                   <br>
-                  <span class="badge bg-dark">influenza virus</span>
-                  <span class="badge bg-dark">zoonosis</span>
-                  <span class="badge bg-dark">avian viruses</span>
-                  <span class="badge bg-dark">human viruses</span>
-                  <span class="badge bg-dark">host adaptation</span>
-                  <span class="badge bg-dark">viral diversity</span>
+                  <span class="badge bg-dark">tuberculosis</span>
+                  <span class="badge bg-dark"><e>Mycobacterium microti</e>></span>
+                  <span class="badge bg-dark">experimental infection</span>
+                  <span class="badge bg-dark">disease phenotyping</span>
+                  <span class="badge bg-dark">disease transmission</span>
                   <br>
-                  <p>Performed a large-scale, quantitative analyses on all the changes or substitutions in the reported avian and human H7N9 protein sequencess.</p>
+                  <p>Performed quantitative analyses and computed a pathogenicity score to characterize the disease progression.</p>
                 </p>
                 <div class="researchprojects-info">
                   <h3><strong>Related Link</strong></h3>
