--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#research_projects" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research Projects</span></a></li>
+        <li><a href="#researchprojects" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research Projects</span></a></li>
         <li><a href="#publications" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -249,7 +249,6 @@
                   <p>Explore the genomic determinants of <em>Escherichia coli</em> to cause bloodstream infections vs. commensal isolates comparing their genetic backgrounds for virulence-associated and antimicrobial-resistant genes, performing a GWAS, computing it's heritability, and predicting the pathogenicity over time.</p>
                 </p>
                 <div class="researchprojects-info">
-                  <h3><strong>Related Link</strong></h3>
                   <br>
                   <div class="researchprojects-links">
                     <a href="https://github.com/jburgaya/2022_ecoli_commensal" class="github"><i class="bx bxl-github bx-lg"></i></a>
@@ -268,7 +267,7 @@
                   Under supervision of Dr. Enric Vidal and Dr. Bernat Pérez de Val (CReSA, IRTA-UAB) <br>
                   <br>
                   <span class="badge bg-dark">tuberculosis</span>
-                  <span class="badge bg-dark"><e>Mycobacterium microti</e>></span>
+                  <span class="badge bg-dark"><e>Mycobacterium microti</e></span>
                   <span class="badge bg-dark">experimental infection</span>
                   <span class="badge bg-dark">disease phenotyping</span>
                   <span class="badge bg-dark">disease transmission</span>
@@ -276,7 +275,6 @@
                   <p>Performed quantitative analyses and computed a pathogenicity score to characterize the disease progression.</p>
                 </p>
                 <div class="researchprojects-info">
-                  <h3><strong>Related Link</strong></h3>
                   <br>
                   <div class="researchprojects-links">
                     <a href="https://www.mdpi.com/1999-4915/13/5/871" class="publication"><i class="bx bx-file-blank bx-lg"></i></a>
@@ -288,7 +286,46 @@
       </div>
     </section>
   
-  <!-- ======= Tools Section ======= -->
+  <!-- ======= Publications Section ======= -->
+  <section id="publications" class="publications">
+    <div class="container">   
+      
+      <div class="section-title">
+        <h2>Publications</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6 col-md-6">
+          <h3 class="publications-title">2023</h3>
+          <div class="publications-item1">
+            <h5><a href="https://www.biorxiv.org/content/10.1101/2022.12.31.522367v1" target="_blank">
+              The bacterial genetic determinants of <em>Escherichia coli</em> capacity to cause bloodstream infections in humans</a></h5>
+            <p>
+              <em><strong>Judit Burgaya*</strong>, Julie Marin*, et al</em>
+              <br>
+              bioRxiv
+              <br>
+              <span class="badge bg-dark">Original Research</span>
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6"></div>
+          <h3 class="publications-title">2022</h3>
+          <div class="publications-item1">
+            <h5><a href="https://www.mdpi.com/2076-2607/10/1/135" target="_blank">
+              Experimental <e>Mycobacterium microti</e> Infection in Bank Voles (<e>Myodes glareolus</e>)</a></h5>
+            <p>
+              <em>Enric Vidal*, <strong>Judit Burgaya</strong>, et al</em>
+              <br>
+              Microorganisms
+              <br>
+              <span class="badge bg-dark">Original Research</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
