--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <p> 
             My research moves towards leveraging high-throughput technology and interdisciplinary apporaches to study the transmission and evolution of infectious disease pathogens. <br>
             <br>
-            <b><em>Microbiology, Microbial Genomics, Computational Modeling, Genomic Epidemiology, Antimicrobial Resistance, Between-Host Transmission, Within-Host Evolution</em></b>
+            <b><strong>Microbiology, Microbial Genomics, Computational Modeling, Genomic Epidemiology, Antimicrobial Resistance</strong></b>
             </p>
         </div>
   
