--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <h5><a href="https://www.biorxiv.org/content/10.1101/2022.12.31.522367v1" target="_blank">
               The bacterial genetic determinants of <em>Escherichia coli</em> capacity to cause bloodstream infections in humans</a></h5>
             <p>
-              <em><strong>Judit Burgaya*</strong>, Julie Marin*, et al</em>
+              <em><strong>Judit Burgaya*</strong>, Julie Marin*, ..., Erick Denamur, Marco Galardini, François Blanquart</em>
               <br>
               bioRxiv
               <br>
@@ -315,7 +315,7 @@
             <h5><a href="https://www.mdpi.com/2076-2607/10/1/135" target="_blank">
               Experimental <e>Mycobacterium microti</e> Infection in Bank Voles (<e>Myodes glareolus</e>)</a></h5>
             <p>
-              <em>Enric Vidal*, <strong>Judit Burgaya</strong>, et al</em>
+              <em>Enric Vidal*, <strong>Judit Burgaya</strong>, ..., Bernat Pérez de Val</em>
               <br>
               Microorganisms
               <br>
