--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <div class= "project-box">
                 <h5 class="title"><a href="javascript:void(0);">Computational modeling of bacterial populations and their resilience strategies: influence of the SARS-CoV-2 pandemic on the transmission of multi-drug resistant pathogens</a></h5>
                 <p> 
-                  Under supervison of Prof. Dr. Marco Galardini (TWINCORE | Cluster of Excellence RESIST), Prof. Dr. Susanne Häußler (TWINCORE | Cluster of Excellence RESIST | HZI), and Prof. Dr. Davide Sassera (epartment of Biology and Biotechnology, Università di Pavia)
+                  Under supervison of <strong>Prof. Dr. Marco Galardini</strong> (TWINCORE | Cluster of Excellence RESIST), <strong>Prof. Dr. Susanne Häußler</strong> (TWINCORE | Cluster of Excellence RESIST | HZI), and <strong>Prof. Dr. Davide Sassera</strong> (epartment of Biology and Biotechnology, Università di Pavia)
                   <br>
                   <span class="badge bg-dark">genomic epidemiology</span>
                   <span class="badge bg-dark">phylodynamics</span>
@@ -240,7 +240,7 @@
               <div class= "project-box">
                 <h5 class="title"><a href="javascript:void(0);">The bacterial genetic determinants of Escherichia coli capacity to cause bloodstream infections in humans</a></h5>
                 <p> 
-                  Under the supervision of Prof. Dr. Marco Galardini (TWINCORE | Cluster of Excellence RESIST), as a collaboration with Prof. Dr. Erick Denamur (Université Paris Cité, INSERM, IAME), Prof. Dr. François Blanquart (Center for Interdisciplinary Research in Biology, Collège de France, INSERM), and Assoc. Prof. Dr. Julie Marin (Université Sorbonne Paris Nord, INSERM, IAME)<br>
+                  Under the supervision of <strong>Prof. Dr. Marco Galardini</strong> (TWINCORE | Cluster of Excellence RESIST), as a collaboration with <strong>Prof. Dr. Erick Denamur</strong> (Université Paris Cité, INSERM, IAME), <strong>Prof. Dr. François Blanquart</strong> (Center for Interdisciplinary Research in Biology, Collège de France, INSERM), and <strong>Assoc. Prof. Dr. Julie Marin</strong> (Université Sorbonne Paris Nord, INSERM, IAME)<br>
                   <br>
                   <span class="badge bg-dark">Ecoli</span>
                   <span class="badge bg-dark">GWAS</span>
@@ -264,7 +264,7 @@
               <div class= "project-box">
                 <h5 class="title"><a href="javascript:void(0);">Experimental <em>Mycobacterium microti</em> Infection in Bank Voles (<em>Myodes glareolus</em>)</a></h5>
                 <p> 
-                  Under supervision of Dr. Enric Vidal and Dr. Bernat Pérez de Val (CReSA, IRTA-UAB) <br>
+                  Under supervision of <strong>Dr. Enric Vidal</strong> and <strong>Dr. Bernat Pérez de Val</strong> (CReSA, IRTA-UAB) <br>
                   <br>
                   <span class="badge bg-dark">tuberculosis</span>
                   <span class="badge bg-dark"><e>Mycobacterium microti</e></span>
@@ -332,7 +332,7 @@
     <div class="container">
       <h4>Judit Burgaya</h4>
       <div class="copyright">
-        &copy; Copyright <strong><span>Judit Burgaya (03/2023)</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Judit Burgaya - 03/2023</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
