--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <p><em>Universitat Autònoma de Barcelona (UAB), Bellaterra, Spain</em></p>
               <p>
                 <strong>Dissertation: </strong> The microbiota-gut-brain axis implications in Alzheimer’s disease <br>
-                <strong>Supervisor: </strong> TO ADD 
+              <!-- <strong>Supervisor: </strong> TO ADD -->
               </p>
             </div>
           </div>
@@ -332,7 +332,7 @@
     <div class="container">
       <h4>Judit Burgaya</h4>
       <div class="copyright">
-        &copy; Copyright <strong><span>Judit Burgaya - 03/2023</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Judit Burgaya 03/2023</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
