new paper, awards and grants

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#researchprojects" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research Projects</span></a></li>
         <li><a href="#publications" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
+        <li><a href="#grants" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Awards and Grants</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -227,7 +228,7 @@
                   <span class="badge bg-dark">genomic epidemiology</span>
                   <span class="badge bg-dark">phylodynamics</span>
                   <span class="badge bg-dark">network graph sampling</span>
-                  <span class="badge bg-dark">transmission model</span>
+                  <span class="badge bg-dark">transmission modeling</span>
                   <br>
                   <p>Use of bacterial genomic sequences to identify evolutionary signatures and transmission determinants. Develop a between-host transmission model that takes into account NPIs, bacterial features and host determinants.</p>
                 </p> 
@@ -245,6 +246,8 @@
                   <span class="badge bg-dark">Ecoli</span>
                   <span class="badge bg-dark">GWAS</span>
                   <span class="badge bg-dark">machine learning</span>
+                  <span class="badge bg-dark">bacterial genomics</span>
+                  <span class="badge bg-dark">antibiotic resistance</span>
                   <br>
                   <p>Explore the genomic determinants of <em>Escherichia coli</em> to cause bloodstream infections vs. commensal isolates comparing their genetic backgrounds for virulence-associated and antimicrobial-resistant genes, performing a GWAS, computing it's heritability, and predicting the pathogenicity over time.</p>
                 </p>
@@ -252,7 +255,7 @@
                   <br>
                   <div class="researchprojects-links">
                     <a href="https://github.com/jburgaya/2022_ecoli_commensal" class="github"><i class="bx bxl-github bx-lg"></i></a>
-                    <a href="https://www.biorxiv.org/content/10.1101/2022.12.31.522367v1" class="publication"><i class="bx bx-file-blank bx-lg"></i></a>
+                    <a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010842" class="publication"><i class="bx bx-file-blank bx-lg"></i></a>
                   </div>
                 </div>  
               </div>
@@ -298,12 +301,26 @@
         <div class="col-lg-6 col-md-6">
           <h3 class="publications-title">2023</h3>
           <div class="publications-item1">
+            <h5><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010842" target="_blank">
+              The bacterial genetic determinants of <em>Escherichia coli</em> capacity to cause bloodstream infections in humans</a></h5>
+            <p>
+              <em><strong>Judit Burgaya*</strong>, Julie Marin*, ..., Erick Denamur, Marco Galardini, François Blanquart</em>
+              <br>
+              PLOS Genetics
+              <br>
+              <span class="badge bg-dark">Original Research</span>
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <h3 class="publications-title">2023</h3>
+          <div class="publications-item1">
             <h5><a href="https://www.biorxiv.org/content/10.1101/2022.12.31.522367v1" target="_blank">
               The bacterial genetic determinants of <em>Escherichia coli</em> capacity to cause bloodstream infections in humans</a></h5>
             <p>
               <em><strong>Judit Burgaya*</strong>, Julie Marin*, ..., Erick Denamur, Marco Galardini, François Blanquart</em>
               <br>
-              bioRxiv
+              bioRxiv (Preprint)
               <br>
               <span class="badge bg-dark">Original Research</span>
             </p>
@@ -326,6 +343,33 @@
       </div>
     </div>
   </section>
+
+    <!-- ======= Awards and Grants ======= -->
+    <section id="grants" class="grants">
+      <div class="container">   
+        
+        <div class="section-title">
+          <h2>Awards and Grants</h2>
+        </div>
+  
+        <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <h3 class="grant-title">2023</h3>
+            <div class="grant-item1">
+              <p>FEMS Meeting Attendance Grant</p>
+              <p>
+              <p>Applied Bioinformatics and Public Health Microbiology bursary award winner</p>
+              </p>
+                <br>
+                PLOS Genetics
+                <br>
+                <span class="badge bg-dark">Original Research</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
