--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             </div>
           </div>
       </div>
-    </section>
+    </section><!-- End Research Projects Section -->
   
   <!-- ======= Publications Section ======= -->
   <section id="publications" class="publications">
@@ -342,41 +342,34 @@
         </div>
       </div>
     </div>
-  </section>
+  </section><!-- End Publications Section -->
 
-    <!-- ======= Awards and Grants ======= -->
-    <section id="grants" class="grants">
-      <div class="container">   
-        
-        <div class="section-title">
-          <h2>Awards and Grants</h2>
-        </div>
-  
-        <div class="row">
-          <div class="col-lg-6 col-md-6">
-            <h3 class="grant-title">2023</h3>
-            <div class="grant-item1">
-              <p>FEMS Meeting Attendance Grant</p>
-              <p>
-              <p>Applied Bioinformatics and Public Health Microbiology bursary award winner</p>
-              </p>
-                <br>
-                PLOS Genetics
-                <br>
-                <span class="badge bg-dark">Original Research</span>
-              </p>
-            </div>
-          </div>
+<!-- ======= Awards and Grants ======= -->
+<section id="grants" class="grants">
+  <div class="container">   
+    <div class="section-title">
+      <h2>Awards and Grants</h2>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6 col-md-6">
+        <h3 class="grant-title">2023</h3>
+        <div class="grant-item1">
+          <p>FEMS Meeting Attendance Grant</p>
+          <p>Applied Bioinformatics and Public Health Microbiology bursary award winner</p>
+          <span class="badge bg-dark">Original Research</span>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
+</section><!-- End Awards and Grants Section -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
       <h4>Judit Burgaya</h4>
       <div class="copyright">
-        &copy; Copyright <strong><span>Judit Burgaya 03/2023</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Judit Burgaya 08/2023</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
