--- a/index.html
+++ b/index.html
@@ -352,12 +352,11 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-6 col-md-6">
+      <div class="col-lg-9 pt-4 pt-lg-0 content">
         <h3 class="grant-title">2023</h3>
         <div class="grant-item1">
           <p>FEMS Meeting Attendance Grant</p>
           <p>Applied Bioinformatics and Public Health Microbiology bursary award winner</p>
-          <span class="badge bg-dark">Original Research</span>
         </div>
       </div>
     </div>
